# VDI_Broker

./: .gitignore
client/SDL/SDL3/dialogs/: sdl_button.cpp
docs/: vdi_broker_plugin.md  vdi_redirector.md
server/: CMakeLists.txt
server/proxy/: pf_client.c  pf_modules.c  pf_server.c  pf_update.c
server/proxy/modules/vdi_broker/: CMakeLists.txt  vdi_broker.cpp  vdi_broker.sample.yaml  vdi_broker_config.cpp  vdi_broker_config.h  vdi_container_manager.cpp  vdi_container_manager.h  vdi_logging.h  vdi_vortice_server.cpp  vdi_vortice_server.h
server/vdi-common/: CMakeLists.txt  font8x8_basic.inl  vdi_broker.sample.yaml  vdi_broker_config.cpp  vdi_broker_config.h  vdi_broker_config_parser.cpp  vdi_broker_config_parser.h  vdi_broker_config_parser_blocks.cpp  vdi_broker_config_parser_internal.h  vdi_container_build.cpp  vdi_container_manager.cpp  vdi_container_manager.h  vdi_container_manager_constants.h  vdi_container_manager_internal.h  vdi_container_podman_network.cpp  vdi_container_podman_runtime.cpp  vdi_container_utils.cpp  vdi_logging.h  vdi_logging_utils.cpp  vdi_status_display.cpp  vdi_status_display.h  vdi_vortice_protocol.cpp  vdi_vortice_protocol.h
server/vdi_proxy/: CMakeLists.txt  ModuleOptions.cmake  vdi_proxy.cpp  vdi_proxy_config.h  vdi_proxy_constants.h  vdi_proxy_server.cpp  vdi_proxy_server.h  vdi_proxy_utils.cpp  vdi_proxy_utils.h
server/vdi_redirector/: CMakeLists.txt  ModuleOptions.cmake  vdi_broker_config.cpp  vdi_broker_config.h  vdi_container_manager.cpp  vdi_logging.h  vdi_redirector.cpp  vdi_redirector_config.h  vdi_redirector_constants.h  vdi_redirector_server.cpp  vdi_redirector_server.h  vdi_redirector_server_helpers.cpp  vdi_redirector_server_helpers.h  vdi_redirector_utils.cpp  vdi_redirector_utils.h  vdi_status_display.cpp  vdi_status_display.h  vdi_vortice_client.cpp  vdi_vortice_client.h
